welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:41: error: not found: value estSurLettre
} while (estSurLettre())
         ^